// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`supervisor conversion convertSupervisorToSql converts a supervisor with dimensions and metrics (rollup -> GROUP BY) 1`] = `
INSERT INTO "wikipedia"
SELECT
  "channel",
  "user",
  "page",
  "namespace",
  COUNT(*) AS "count",
  SUM("added") AS "sum_added",
  TIME_PARSE("timestamp", 'iso') AS "__time"
FROM TABLE(EXTERN('{"type":"s3","uris":["s3://my-bucket/wikipedia/data/"],"objectGlob":"**.json"}', '{"type":"json"}', '[{"name":"timestamp","type":"string"},{"name":"channel","type":"string"},{"name":"user","type":"string"},{"name":"page","type":"string"},{"name":"namespace","type":"string"},{"name":"added","type":"string"}]'))
GROUP BY TIME_PARSE("timestamp", 'iso'), "channel", "user", "page", "namespace"
PARTITIONED BY DAY
CLUSTERED BY "channel", "user"
`;

exports[`supervisor conversion convertSupervisorToSql converts a supervisor without metrics (no GROUP BY) 1`] = `
INSERT INTO "wikipedia"
SELECT
  "channel",
  "user",
  "page",
  "namespace",
  TIME_PARSE("timestamp", 'iso') AS "__time"
FROM TABLE(EXTERN('{"type":"s3","uris":["s3://my-bucket/wikipedia/data/"],"objectGlob":"**.json"}', '{"type":"json"}', '[{"name":"timestamp","type":"string"},{"name":"channel","type":"string"},{"name":"user","type":"string"},{"name":"page","type":"string"},{"name":"namespace","type":"string"}]'))
PARTITIONED BY DAY
CLUSTERED BY "channel", "user"
`;

exports[`supervisor conversion convertSupervisorToSql converts the full range of supported metric aggregations 1`] = `
INSERT INTO "wikipedia"
SELECT
  "channel",
  "user",
  "page",
  "namespace",
  COUNT(*) AS "count",
  SUM("added") AS "sum_added",
  MIN("added") AS "min_added",
  MAX("added") AS "max_added",
  EARLIEST("added") AS "first_added",
  LATEST("added") AS "last_added",
  EARLIEST("page", 128) AS "first_page",
  LATEST("page", 128) AS "last_page",
  APPROX_COUNT_DISTINCT_DS_THETA("user") AS "theta_user",
  APPROX_COUNT_DISTINCT_DS_HLL("user") AS "hll_user",
  DS_QUANTILES_SKETCH("added") AS "quantiles_added",
  APPROX_COUNT_DISTINCT_BUILTIN("user") AS "unique_user",
  TIME_PARSE("timestamp", 'iso') AS "__time"
FROM TABLE(EXTERN('{"type":"s3","uris":["s3://my-bucket/wikipedia/data/"],"objectGlob":"**.json"}', '{"type":"json"}', '[{"name":"timestamp","type":"string"},{"name":"channel","type":"string"},{"name":"user","type":"string"},{"name":"page","type":"string"},{"name":"namespace","type":"string"},{"name":"added","type":"string"}]'))
GROUP BY TIME_PARSE("timestamp", 'iso'), "channel", "user", "page", "namespace"
PARTITIONED BY DAY
CLUSTERED BY "channel", "user"
`;

exports[`supervisor conversion convertSupervisorToSql includes non-default sketch arguments 1`] = `
INSERT INTO "wikipedia"
SELECT
  "channel",
  "user",
  "page",
  "namespace",
  APPROX_COUNT_DISTINCT_DS_THETA("user", 32768) AS "theta_user",
  APPROX_COUNT_DISTINCT_DS_HLL("user", 14, 'HLL_8') AS "hll_user",
  DS_QUANTILES_SKETCH("added", 256) AS "quantiles_added",
  EARLIEST("page", 1024) AS "first_page",
  TIME_PARSE("timestamp", 'iso') AS "__time"
FROM TABLE(EXTERN('{"type":"s3","uris":["s3://my-bucket/wikipedia/data/"],"objectGlob":"**.json"}', '{"type":"json"}', '[{"name":"timestamp","type":"string"},{"name":"channel","type":"string"},{"name":"user","type":"string"},{"name":"page","type":"string"},{"name":"namespace","type":"string"},{"name":"added","type":"string"}]'))
GROUP BY TIME_PARSE("timestamp", 'iso'), "channel", "user", "page", "namespace"
PARTITIONED BY DAY
CLUSTERED BY "channel", "user"
`;
